<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppQuest Schatzkarte</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="no_value">no_value</string>
    <string name="center_current_position">current position</string>
    <string name="set_marker_center">set marker</string>
    <string name="trace">trace</string>
    <string name="hsr">hsr</string>
    <string name="no_gps">No GPS Provider found!\nPlease activate!</string>
    <string name="no_hsr_mbtiles">hsr.mbtiles not found!</string>

</resources>